@@ -5,6 +5,8 @@ local Event = require('stdlib/event/event')
 local Player = require('stdlib/event/player')
 local Position = require('stdlib/area/position')
 
+local evt = defines.events
+
 local function zapper(event)
     local player, pdata = Player.get(event.player_index)
     local name = (player.cursor_stack.valid_for_read and player.cursor_stack.name)
@@ -33,21 +35,27 @@ local function cleanup_blueprints(event)
 
     local settings = player.mod_settings
     local inventory
+    local is_trash = event.name == evt.on_player_trash_inventory_changed
 
-    if event.name == defines.events.on_player_main_inventory_changed then
+    if event.name == evt.on_player_main_inventory_changed then
         inventory = player.get_main_inventory()
-    else
+    elseif event.name == evt.on_player_quickbar_inventory_changed then
         inventory = player.get_quickbar()
+    elseif is_trash then
+        inventory = player.get_inventory(defines.inventory.player_trash)
+    else
+        return
     end
 
     for planner in pairs(global.planners or {}) do
         local bp = game.item_prototypes[planner] and inventory.find_item_stack(planner)
         if bp then
             local setting = settings['picker-no-' .. bp.name .. '-inv'] and settings['picker-no-' .. bp.name .. '-inv'].value or settings['picker-no-other-planner-inv'].value
-            if setting ~= 'none' and not (setting == 'main' and inventory.is_quickbar()) then
-                bp.clear()
+            if event.name == evt.on_player_trash_inventory_changed or (setting ~= 'none' and not (setting == 'main' and inventory.is_quickbar())) then
+               return bp.clear()
             end
         end
     end
 end
-Event.register({defines.events.on_player_main_inventory_changed, defines.events.on_player_quickbar_inventory_changed}, cleanup_blueprints)
+local events = {evt.on_player_main_inventory_changed, evt.on_player_quickbar_inventory_changed, evt.on_player_trash_inventory_changed}
+Event.register(events, cleanup_blueprints)
